--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
     "gulp-jscs": "^1.5.1",
-    "gulp-jshint": "^1.10.0"
+    "gulp-jshint": "^1.10.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-uglify": "^1.2.0",
+    "lodash": "^3.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
