Gulp file is working, setting up a BrowserSync and a watch.

--- a/.jshintrc
+++ b/.jshintrc
@@ -89,6 +89,6 @@
 
   // Custom Globals
   "globals": {
-    "angular": true, // Angular
+    "angular": true
   } // additional predefined global variables
 }
