--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gulp": "^3.8.11"
   },
   "devDependencies": {
+    "browser-sync": "^2.5.3",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-jscs": "^1.5.1",
     "gulp-jshint": "^1.10.0",
