--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "~1.3.15",
     "angular-loading-bar": "~0.7.1",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "basscss": "~6.0.0"
   }
 }
