--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-jscs": "^1.5.1",
     "gulp-jshint": "^1.10.0",
+    "gulp-minify-css": "^1.0.0",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
     "lodash": "^3.6.0"
