--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "gulp-minify-css": "^1.0.0",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
+    "jasmine": "^2.2.1",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-safari-launcher": "^0.1.1",
     "lodash": "^3.6.0"
   },
   "scripts": {
