--- a/package.json
+++ b/package.json
@@ -1,45 +1,39 @@
 {
   "name": "traveller",
   "version": "1.0.0",
-  "description": "traveller webapp packages file",
+  "description": "traveller web-app",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.8.11"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.5.3",
-    "gulp": "^3.8.11",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-jscs": "^1.5.1",
-    "gulp-jshint": "^1.10.0",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-uglify": "^1.2.0",
-    "jasmine": "^2.2.1",
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.8",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.5",
-    "karma-safari-launcher": "^0.1.1",
-    "lodash": "^3.6.0"
+  "directories": {
+    "test": "tests"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Bleeky/traveller.git"
+    "url": "git+https://github.com/Bleeky/traveller.git"
   },
   "keywords": [
-    "traveller",
-    "webapp"
+    "web-app",
+    "front-end"
   ],
-  "author": "bleeky",
+  "author": "Bleeky",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Bleeky/traveller/issues"
   },
-  "homepage": "https://github.com/Bleeky/traveller"
+  "homepage": "https://github.com/Bleeky/traveller#readme",
+  "dependencies": {
+    "browser-sync": "^2.6.5",
+    "glob": "^5.0.5",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-jscs": "^1.6.0",
+    "gulp-jshint": "^1.10.0",
+    "gulp-minify-css": "^1.1.0",
+    "gulp-rimraf": "^0.1.1",
+    "gulp-sass": "^1.3.3",
+    "gulp-uglify": "^1.2.0",
+    "lodash": "^3.7.0"
+  }
 }
