--- a/package.json
+++ b/package.json
@@ -28,12 +28,19 @@
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-git": "^1.2.1",
     "gulp-jscs": "^1.6.0",
     "gulp-jshint": "^1.10.0",
+    "gulp-karma": "0.0.4",
     "gulp-minify-css": "^1.1.0",
+    "gulp-prompt": "^0.1.2",
     "gulp-rimraf": "^0.1.1",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
+    "jasmine-core": "^2.3.0",
+    "karma": "^0.12.31",
+    "karma-jasmine": "^0.3.5",
+    "karma-safari-launcher": "^0.1.1",
     "lodash": "^3.7.0"
   }
 }
