Commit before leaving Luxembourg

--- a/.jscsrc
+++ b/.jscsrc
@@ -69,7 +69,7 @@
         "beforeOpeningCurlyBrace": true
     },
     "requireSpacesInNamedFunctionExpression": {
-        "beforeOpeningRoundBrace": true,
+        "beforeOpeningRoundBrace": null,
         "beforeOpeningCurlyBrace": true
     },
     "requireTrailingComma": null,
