--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Bleeky/traveller#readme",
   "dependencies": {
+    "angular-jsdoc": "^0.3.3",
     "browser-sync": "^2.6.5",
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
@@ -36,8 +37,11 @@
     "gulp-prompt": "^0.1.2",
     "gulp-rimraf": "^0.1.1",
     "gulp-sass": "^1.3.3",
+    "gulp-shell": "^0.4.1",
     "gulp-uglify": "^1.2.0",
+    "ink-docstrap": "^0.5.2",
     "jasmine-core": "^2.3.0",
+    "jsdoc": "^3.3.0-beta3",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
     "karma-safari-launcher": "^0.1.1",
